# app/app.py
@@ -41,30 +41,6 @@ celery = make_celery(app)
 def homepage():
     return render_template('homepage.html')
 
-@app.route('/stream', methods=['GET','POST'])
-def stream():
-    if(request.method  == 'GET'):
-        return render_template('streamform.html')
-    if(request.method == 'POST'):
-        room = request.form['room']
-        return redirect('/stream/'+room)
-
-@app.route('/watch', methods=['GET','POST'])
-def watch():
-    if(request.method  == 'GET'):
-        return render_template('watchform.html')
-    if(request.method == 'POST'):
-        room = request.form['room']
-        return redirect('/watch/'+room)
-
-
-@app.route('/watch/<room>', methods=['GET'])
-def watch_room(room):
-    return render_template('watch.html', room=room)
-
-@app.route('/stream/<room>', methods=['GET'])
-def stream_room(room):
-    return render_template('stream.html', room=room)
 
 @app.route('/predict', methods=['POST'])
 def predict():
@@ -101,27 +77,26 @@ def on_leave(data):
     room = data['room']
     leave_room(room)
 
-@socketio.on('frameinput')
-def on_frameinput0(data):
-    emit_function.delay(data)
+@socketio.on('frameinput1')
+def on_frameinput1(data):
+    emit_function1.delay(data)
 
 @celery.task()
-def emit_function(data):
+def emit_function1(data):
     local_socketio = SocketIO(message_queue='redis://localhost:6379/0')
     base64_data = data['image_data_url']
     room = data['room']
-    result = base64_data
     multiple_face = 0
     live_confidence = -1
     cover_ratio = -1
     try:
-        result, multiple_face, live_confidence, cover_ratio = combined(base64_data)
+        _, multiple_face, live_confidence, cover_ratio = combined(base64_data)
     except Exception as e:
         print(e)
-   
-    data1 = {'result': result, 'multiple_face': multiple_face, 'live_confidence': str(live_confidence), 'cover_ratio': str(cover_ratio)}
+    
+    data1 = {'multiple_face': str(multiple_face), 'live_confidence': str(live_confidence), 'cover_ratio': str(cover_ratio)} 
     try:
-        local_socketio.emit('frameoutput0', data1, to=room)
+        local_socketio.emit('frameoutput1', data1, to=room)  
     except Exception as e:
         print(e)
 
