# app/static/swagger.json
@@ -16,116 +16,18 @@
         }
       }
     },
-    "/stream": {
+    "/client": {
       "get": {
-        "description": "Returns stream form html",
+        "description": "Returns client page html",
         "produces": ["text/html"],
         "responses": {
           "200": {
             "description": "Successful operation"
           }
         }
-      },
-      "post": {
-        "description": "Takes camera id from request data and redirects to streaming interface",
-        "consumes": ["application/x-www-form-urlencoded"],
-        "parameters": [
-          {
-            "name": "Camera id from stream form",
-            "in": "body",
-            "description": "Form data for camera id",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "room": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ]
       }
     },
-    "/watch": {
-      "get": {
-        "description": "Returns watch form html",
-        "produces": ["text/html"],
-        "responses": {
-          "200": {
-            "description": "Successful operation"
-          }
-        }
-      },
-      "post": {
-        "description": "Takes camera id from request data and redirects to watching interface",
-        "consumes": ["application/x-www-form-urlencoded"],
-        "parameters": [
-          {
-            "name": "Camera id from watch form",
-            "in": "body",
-            "description": "Form data for camera id",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "room": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ]
-      }
-    },
-    "/stream/{room}": {
-        "get": {
-            "description": "Returns the streaming interface html for a camera id",
-            "produces": [
-                "text/html"
-            ],
-            "parameters": [
-                {
-                    "name": "room",
-                    "in": "path",
-                    "description":"camera id",
-                    "required": true,
-                    "schema":{
-                        "type":"string"
-                    }
-                }
-            ],
-            "responses": {
-                "200": {
-                  "description": "Successful operation"
-                }
-              }
-        }
-      },
-      "/watch/{room}": {
-        "get": {
-            "description": "Returns the watching interface html for a camera id",
-            "produces": [
-                "text/html"
-            ],
-            "parameters": [
-                {
-                    "name": "room",
-                    "in": "path",
-                    "description":"camera id",
-                    "required": true,
-                    "schema":{
-                        "type":"string"
-                    }
-                }
-            ],
-            "responses": {
-                "200": {
-                  "description": "Successful operation"
-                }
-              }
-        }
-      },
+    
       "/predict": {
         "post": {
           "description": "Get results for an image frame in base64 format",
